--- a/css/style.css
+++ b/css/style.css
@@ -54,11 +54,40 @@ footer {
   align-items: center;
   justify-content: center;
   height: 65px;
+
+  flex-direction: column;
+  height: auto;
+  padding: 15px 0;
+  margin-top: 15px;
 }
 
-/* links in header menu */
+/* links in header/footer */
 .links {
   display: none;
+}
+
+footer .links {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 20px 0 20px 0;
+  padding: 0;
+  font-weight: 400;
+}
+footer .links li {
+  display: inline-block;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+footer .links li:first-child {
+  margin-left: 0;
+}
+footer .links li:last-child {
+  margin-right: 0;
+}
+footer .links li a {
+  color: white;
+  text-decoration: none;
 }
 
 /* first section */
@@ -87,7 +116,7 @@ footer {
   height: 215px;
   width: 100%;
   color: white;
-  text-align: center;
+  text-align: left;
   border: none;
 }
 /* main description */
@@ -95,11 +124,13 @@ footer {
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 40px;
+  margin-left: 15px;
 }
 .descr-secondary {
   font-size: 18px;
   font-weight: 700;
   margin-bottom: 40px;
+  margin-left: 15px;
 }
 /* container styled as button in first section */
 .button {
@@ -113,6 +144,7 @@ footer {
   transition: background-color 1s, color 1s;
   cursor: pointer;
   text-decoration: none;
+  margin-left: 15px;
 }
 
 /* second section */
@@ -184,23 +216,24 @@ footer {
 /* third section */
 .offer-section {
   width: 100%;
-  height: 1550px;
+  height: 1800px;
   background-color: #405d78;
 }
 
 .descr-offer {
   color: #ffffff;
-  font-size: 34px;
+  font-size: 24px;
   font-weight: 700;
   text-align: center;
 }
 
 /* grid container for boxes with offers */
 .grid-container {
+  margin-right: 50px;
   display: grid;
   grid-template-columns: repeat(1, 200px);
   grid-template-rows: repeat(6, 200px);
-  gap: 30px;
+  gap: 80px;
   justify-content: center;
 }
 
@@ -208,8 +241,8 @@ footer {
   color: #152d41;
   font-size: 22px;
   font-weight: 400;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   background-color: #f1f1f1;
   display: flex;
   justify-content: center;
@@ -241,6 +274,9 @@ footer {
 
 /* tablet */
 @media only screen and (min-width: 600px) {
+  .header-menu {
+    margin-left: 18vw;
+  }
   .site-descr {
     width: 66vw;
   }
@@ -257,6 +293,11 @@ footer {
     grid-template-columns: repeat(2, 200px);
     grid-template-rows: repeat(3, 200px);
     gap: 40px;
+    margin-left: 40px;
+  }
+  .grid-item {
+    width: 200px;
+    height: 200px;
   }
 }
 
@@ -269,6 +310,12 @@ footer {
   .footer-menu {
     font-size: 18px;
     justify-content: space-between;
+
+    display: flex;
+    flex-direction: row;
+    height: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 
   .site-descr {
@@ -337,10 +384,24 @@ footer {
     text-align: left;
   }
 
+  .grid-item {
+    width: 200px;
+    height: 200px;
+  }
+
   .button:hover {
     background-color: white;
     color: black;
   }
+
+  footer .links {
+    display: inline-block;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+  }
+
   .links {
     display: inline-block;
     list-style-type: none;
