--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ footer .links li a {
     height: 850px;
   }
   .about-section {
-    height: 800px;
+    height: auto;
   }
   .footer-menu {
     font-size: 18px;
