--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ footer .links li a {
 /* second section */
 .about-section {
   width: 100%;
-  height: 970px;
+  height: auto;
   background-color: #f1f1f1;
   justify-content: center;
 }
@@ -168,6 +168,7 @@ footer .links li a {
   margin-right: 30px;
   display: flex;
   flex-direction: column;
+  margin-bottom: 50px;
 }
 .employee {
   display: flex;
@@ -196,7 +197,7 @@ footer .links li a {
 
 /* container for employee description */
 .info-container {
-  order: 2;
+  order: 1;
   flex: 0;
   width: 100%;
 }
@@ -235,6 +236,7 @@ footer .links li a {
   grid-template-rows: repeat(6, 200px);
   gap: 80px;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
 .grid-item {
@@ -324,8 +326,20 @@ footer .links li a {
     text-align: left;
   }
 
+  /* main description */
+  .descr-main {
+    margin-left: 0;
+  }
+  .descr-secondary {
+    margin-left: 0;
+  }
+  /* container styled as button in first section */
+  .button {
+    margin-left: 0;
+  }
+
   .about-section {
-    height: 600px;
+    height: auto;
   }
 
   .descr-about {
@@ -375,7 +389,7 @@ footer .links li a {
   }
 
   .offer-section {
-    height: 650px;
+    height: auto;
   }
 
   .descr-offer {
